force-app/main/default/objects/Commission__c/fields/Commission_amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_amount__c</fullName>
    <label>Commission amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>