force-app/main/default/objects/Commission__c/fields/Final_sale_price_of_the_property__c.field-meta.xml
<CustomField>
    <fullName>Final_sale_price_of_the_property__c</fullName>
    <label>Final sale price of the property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>