force-app/main/default/objects/Commission__c/fields/Payment_status__c.field-meta.xml
<CustomField>
    <fullName>Payment_status__c</fullName>
    <label>Payment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>