force-app/main/default/objects/Commission__c/validationRules/Commission_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Amount_Validation</fullName>
    <active>true</active>
    <description>Ensures commission amount matches rate calculation</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Commission_amount__c)),
  NOT(ISBLANK(Opportunity__r.Amount)),
  NOT(ISBLANK(CommissionPercentage__c)),
  ABS(Commission_amount__c - (Opportunity__r.Amount * CommissionPercentage__c)) &gt; 1
)</errorConditionFormula>
    <errorDisplayField>Commission_amount__c</errorDisplayField>
    <errorMessage>Commission amount should equal Sale Price × Commission Rate</errorMessage>
</ValidationRule>