force-app/main/default/objects/Commission__c/validationRules/Payment_Date_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Date_Logic</fullName>
    <active>true</active>
    <description>Ensures payment date is only set when status is &quot;Paid&quot;</description>
    <errorConditionFormula>OR(
  AND(ISPICKVAL(Payment_status__c, &quot;Paid&quot;), ISBLANK(Commission_Paid_Date__c)),
  AND(NOT(ISPICKVAL(Payment_status__c, &quot;Paid&quot;)), NOT(ISBLANK(Commission_Paid_Date__c)))
)</errorConditionFormula>
    <errorDisplayField>Commission_Paid_Date__c</errorDisplayField>
    <errorMessage>Payment date should only be set when status is &apos;Paid&apos; and must be set when status is &apos;Paid&apos;</errorMessage>
</ValidationRule>