force-app/main/default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CommissionPercentage__c</columns>
    <columns>Commission_amount__c</columns>
    <columns>Final_sale_price_of_the_property__c</columns>
    <columns>Payment_status__c</columns>
    <columns>Commission_Paid_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>